Addition of AgentMaxStepHeight into FNavMeshResolutionParam #rb Yoan.StAmant #preflight 6436d6740c19befb6c93d674
[CL 25018392 by aris theophanidis in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2626,9 +2626,9 @@ DefaultDrawDistance=5000.0
 TileSizeUU=1000.f
 CellSize=19.f
 CellHeight=10.f
-NavMeshResolutionParams[0]=(CellSize=38.000000,CellHeight=10.f)
-NavMeshResolutionParams[1]=(CellSize=19.000000,CellHeight=10.f)
-NavMeshResolutionParams[2]=(CellSize=19.000000,CellHeight=10.f)
+NavMeshResolutionParams[0]=(CellSize=38.000000,CellHeight=10.f,AgentMaxStepHeight=35.f)
+NavMeshResolutionParams[1]=(CellSize=19.000000,CellHeight=10.f,AgentMaxStepHeight=35.f)
+NavMeshResolutionParams[2]=(CellSize=19.000000,CellHeight=10.f,AgentMaxStepHeight=35.f)
 AgentRadius=34.f
 AgentHeight=144.f
 AgentMaxHeight=160.f
