- Prefixing MaterialX material expressions classes and names to avoid potential validation errors on some plugins - Redirecting material expressions in BaseEngine.ini - Optimizing Length material expression for Scalar inputs by just outputting abs value which is practically free on gpu - Modifiying UMaterialExpressionTextureSampleParameterBlur, Kernel size should be an enum instead of a float
#rb JeanLuc.Corenthin
#jira UE-182853
#preflight 64379c931f33a0b34a67af39

[CL 25021579 by Danny Kabrane in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1151,6 +1151,47 @@ DefaultWorldPartitionHLODLayer=/Engine/Maps/Templates/HLODs/HLODLayer_Instanced.
 +ClassRedirects=(OldName="XRDeviceVisualizationComponent", NewName="/Script/XRBase.XRDeviceVisualizationComponent")
 +ClassRedirects=(OldName="XRLoadingScreenFunctionLibrary", NewName="/Script/XRBase.XRLoadingScreenFunctionLibrary")
 
+; Rename MaterialX Material Expressions and Enums
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionAppend3Vector", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXAppend3Vector")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionAppend4Vector", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXAppend4Vector")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionBurn", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXBurn")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionDifference", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXDifference")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionDisjointOver", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXDisjointOver")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionDodge", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXDodge")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionExponential", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXExponential")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionFractal3D", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXFractal3D")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionHsvToRgb", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXHsvToRgb")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionIn", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXIn")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionLength", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXLength")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionLogarithm", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXLogarithm")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionLuminance", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXLuminance")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionMask", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXMask")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionMatte", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXMatte")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionMinus", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXMinus")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionOut", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXOut")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionOver", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXOver")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionOverlay", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXOverlay")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionPlace2D", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXPlace2D")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionPlus", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXPlus")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionPremult", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXPremult")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionRamp4", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXRamp4")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionRampLeftRight", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXRampLeftRight")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionRampTopBottom", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXRampTopBottom")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionRemap", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXRemap")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionRgbToHsv", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXRgbToHsv")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionRotate2D", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXRotate2D")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionScreen", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXScreen")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionSplitLeftRight", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXSplitLeftRight")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionSplitTopBottom", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXSplitTopBottom")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionTextureSampleParameterBlur", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXTextureSampleParameterBlur")
++ClassRedirects=(OldName="/Script/InterchangeImport.UMaterialExpressionUnpremult", NewName="/Script/InterchangeImport.UMaterialExpressionMaterialXUnpremult")
++EnumRedirects=(OldName="ETextureSampleBlurFilter", NewName="EMaterialXTextureSampleBlurFilter")
++EnumRedirects=(OldName="ELuminanceMode", NewName="EMaterialXLuminanceMode")
+
+
+
+
+
 [CoreUObject.Metadata]
 ; Note: UnrealHeaderTool should be rerun after making changes to MetadataRedirects to catch any keys specified in class headers
 +MetadataRedirects=(OldKey="K2Protected", NewKey="BlueprintProtected")
