Implements a r.TSR.ShadingRejection.TileOverscan to reducing tiling artifact on high, epic and cinematic scalability
#rb none
#preflight 6438662bec219759f5d553e4

[CL 25035533 by guillaume abadie in ue5-main branch]

--- a/Engine/Config/BaseScalability.ini
+++ b/Engine/Config/BaseScalability.ini
@@ -44,6 +44,7 @@ r.TSR.History.ScreenPercentage=100
 r.TSR.History.UpdateQuality=0
 r.TSR.History.GrandReprojection=0
 r.TSR.ShadingRejection.Flickering=0
+r.TSR.ShadingRejection.TileOverscan=2
 r.TSR.Velocity.Extrapolation=0
 r.TSR.RejectionAntiAliasingQuality=0
 
@@ -55,6 +56,7 @@ r.TSR.History.ScreenPercentage=100
 r.TSR.History.UpdateQuality=1
 r.TSR.History.GrandReprojection=0
 r.TSR.ShadingRejection.Flickering=0
+r.TSR.ShadingRejection.TileOverscan=2
 r.TSR.Velocity.Extrapolation=0
 r.TSR.RejectionAntiAliasingQuality=1
 
@@ -66,6 +68,7 @@ r.TSR.History.ScreenPercentage=100
 r.TSR.History.UpdateQuality=2
 r.TSR.History.GrandReprojection=0
 r.TSR.ShadingRejection.Flickering=1
+r.TSR.ShadingRejection.TileOverscan=3
 r.TSR.Velocity.Extrapolation=0
 r.TSR.RejectionAntiAliasingQuality=1
 
@@ -77,6 +80,7 @@ r.TSR.History.ScreenPercentage=200
 r.TSR.History.UpdateQuality=3
 r.TSR.History.GrandReprojection=0
 r.TSR.ShadingRejection.Flickering=1
+r.TSR.ShadingRejection.TileOverscan=3
 r.TSR.Velocity.Extrapolation=1
 r.TSR.RejectionAntiAliasingQuality=2
 
@@ -88,6 +92,7 @@ r.TSR.History.ScreenPercentage=200
 r.TSR.History.UpdateQuality=3
 r.TSR.History.GrandReprojection=1
 r.TSR.ShadingRejection.Flickering=1
+r.TSR.ShadingRejection.TileOverscan=3
 r.TSR.Velocity.Extrapolation=1
 r.TSR.RejectionAntiAliasingQuality=2
 
