VulkanRHI: Add VULKAN_SM6.  Move features and requirements around to match what was done on d3d.
#rb arciel.rekman, carl.lloyd
#preflight 643996128901e5ef982dc887

[CL 25045731 by jeannoe morissette in ue5-main branch]

--- a/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
@@ -1,6 +1,6 @@
 ; Have a single source of truth for all desktop class Vulkan platforms
 
-; This is done so all the platforms using SP_VULKAN_SM5 can share the same DDC
+; This is done so all the platforms using SP_VULKAN_SM5/SM6 can share the same DDC
 ; If your Vulkan platform needs its own settings, create a new SP for it
 
 [DataDrivenPlatformInfo]
@@ -19,6 +19,7 @@ bIsPC = true
 bIsConsole = false
 bIsAndroidOpenGLES = false
 bSupportsDxc = true
+bIsSPIRV=true
 
 bSupportsDebugViewShaders=true
 
@@ -57,14 +58,14 @@ bSupportsGPUScene = true
 ; //#todo-vulkanddpi
 bSupportsPrimitiveShaders = false
 
-bSupportsUInt64ImageAtomics = true
+bSupportsUInt64ImageAtomics = false
 
 ; //#todo-vulkanddpi
 bRequiresVendorExtensionsForAtomics = false
 
-bSupportsNanite = true
+bSupportsNanite = false
 bSupportsSceneDataCompressedTransforms = true
-bSupportsLumenGI = true
+bSupportsLumenGI = false
 
 ; //#todo-vulkanddpi
 bSupportsSSDIndirect = false
@@ -110,7 +111,6 @@ bSupportsGen5TemporalAA=true
 ; //#todo-vulkanddpi
 bSupportsPerPixelDBufferMask = false
 
-bIsSPIRV=true
 
 bSupportsVariableRateShading = false
 
@@ -131,6 +131,121 @@ bSupportsOIT=false
 
 EnablesHLSL2021ByDefault=1
 FriendlyName=LOCTEXT("FriendlyShaderPlatformName_VulkanPC_SM5", "PC Vulkan SM5")
+
+BindlessSupport=Unsupported
+
+
+
+[ShaderPlatform VULKAN_SM6]
+Language=Vulkan
+MaxFeatureLevel=SM6
+ShaderFormat=SF_VULKAN_SM6
+
+bIsMobile = false
+bIsMetalMRT = false
+bIsPC = true
+bIsConsole = false
+bIsAndroidOpenGLES = false
+bSupportsDxc = true
+bIsSPIRV=true
+
+bSupportsDebugViewShaders=true
+bSupportsMobileMultiView = false
+bSupportsArrayTextureCompression = false
+
+bSupportsDistanceFields = true
+bSupportsDiaphragmDOF = true
+bSupportsRGBColorBuffer = true
+bSupportsCapsuleShadows = true
+bSupportsPercentageCloserShadows=true
+bSupportsVolumetricFog = true
+bSupportsIndexBufferUAVs = true
+
+bSupportsInstancedStereo = true
+SupportsMultiViewport = RuntimeDependent
+
+bSupportsMSAA = true
+bSupports4ComponentUAVReadWrite = false
+bSupportsRenderTargetWriteMask = false
+
+bSupportsRayTracing = true
+bSupportsRayTracingShaders = false
+bSupportsInlineRayTracing = true
+bSupportsRayTracingIndirectInstanceData = true
+bSupportsByteBufferComputeShaders = true
+
+bSupportsGPUScene = true
+bSupportsPrimitiveShaders = false
+bSupportsUInt64ImageAtomics = true
+bRequiresVendorExtensionsForAtomics = false
+
+bSupportsNanite = true
+bSupportsSceneDataCompressedTransforms = true
+bSupportsLumenGI = true
+
+; //#todo-vulkanddpi
+bSupportsSSDIndirect = false
+
+; //#todo-vulkanddpi
+bSupportsTemporalHistoryUpscale = false
+
+; //#todo-vulkanddpi
+bSupportsRTIndexFromVS = false
+
+; //#todo-vulkanddpi
+bSupportsIntrinsicWaveOnce = false
+
+; //#todo-vulkanddpi
+bSupportsConservativeRasterization = false
+
+bSupportsWaveOperations=RuntimeGuaranteed
+MinimumWaveSize=4
+MaximumWaveSize=128
+
+; //#todo-vulkanddpi
+bRequiresExplicit128bitRT = false
+
+bTargetsTiledGPU = false
+bNeedsOfflineCompiler = false
+
+bSupportsComputeFramework = true
+
+; //#todo-vulkanddpi
+bSupportsDualSourceBlending = true
+
+; //#todo-vulkanddpi
+bRequiresGeneratePrevTransformBuffer = false
+
+bRequiresRenderTargetDuringRaster = true
+
+; //#todo-vulkanddpi
+bRequiresDisableForwardLocalLights = true
+
+bCompileSignalProcessingPipeline = true
+bSupportsGen5TemporalAA=true
+
+; //#todo-vulkanddpi
+bSupportsPerPixelDBufferMask = false
+
+bSupportsVariableRateShading = false
+
+NumberOfComputeThreads = 64
+
+bSupportsHairStrandGeometry=true
+bSupportsFFTBloom=true
+bSupportsDiaphragmDOF=true
+
+; shaderOutputLayer is optional in our baseline VK version
+bSupportsVertexShaderLayer=false
+
+bSupportsAnisotropicMaterials=true
+
+; disable until DXC -> SPRIV ROV support is implemented
+bSupportsROV=false
+bSupportsOIT=false
+
+EnablesHLSL2021ByDefault=1
+FriendlyName=LOCTEXT("FriendlyShaderPlatformName_VulkanPC_SM6", "PC Vulkan SM6")
 
 BindlessSupport=AllShaderTypes
 
