--- a/Engine/Config/Windows/BaseWindowsEngine.ini
+++ b/Engine/Config/Windows/BaseWindowsEngine.ini
@@ -21,3 +21,7 @@ BindlessSamplers=RayTracingOnly
 [SF_VULKAN_SM5]
 BindlessResources=Disabled
 BindlessSamplers=Disabled
+
+[SF_VULKAN_SM6]
+BindlessResources=Disabled
+BindlessSamplers=Disabled
