Adds Moderation Mesh scene, rather than sharing the level thumbnail one to allow future changes. Removed the camera zero code from the thumbnail generator, as the camera is set by the scene now. #FORT-578042 [FYI] Daniel.Lamb, Simon.Barrat #preflight 6439507b8901e5ef9811c704
[CL 25049351 by brian marshall1 in ue5-main branch]

--- a/Engine/Config/BaseGame.ini
+++ b/Engine/Config/BaseGame.ini
@@ -234,6 +234,7 @@ FrameInterpolationProcessor=Class'/Script/LiveLink.LiveLinkBasicFrameInterpolati
 [CookedEditorSettings]
 +EngineAssetPaths="/Engine"
 +ProjectAssetPaths="/Game"
++ProjectAssetPaths="/ValkyrieFortnite/Moderation/"
 +DisallowedObjectClassesToLoad="/Script/Engine.Blueprint"
 +DisallowedObjectClassesToLoad="/Script/Engine.AssetImportData"
 +DisallowedAssetClassesToGather="/Script/Engine.World"
