Media Capture Refactor to add render passes in order to support more operations than the custom conversion Add optional downsampling pass Add optional ocio color conversion pass Change ResizeMethod to an enum
#rb simon.therriault geoffrey.douglas
#preflight 643d820c8901e5ef98f171e8
#jira UE-181062

[CL 25070854 by jeremie roy in ue5-main branch]

--- a/Engine/Plugins/Media/MediaIOFramework/MediaIOFramework.uplugin
+++ b/Engine/Plugins/Media/MediaIOFramework/MediaIOFramework.uplugin
@@ -30,6 +30,12 @@
 			"LoadingPhase": "PostConfigInit"
 		}
 	],
+	"Plugins": [
+		{
+			"Name": "OpenColorIO",
+			"Enabled": true
+		}
+	],
 	"DocsURL": "",
 	"IsExperimentalVersion": false
 }
