NearestNeighborModel: fix sunlit assets #rb none #preflight 643c5bd58901e5ef98b30443
[CL 25072429 by zhenglin geng in ue5-main branch]

--- a/Engine/Plugins/Animation/MLDeformer/NearestNeighborModel/NearestNeighborModel.uplugin
+++ b/Engine/Plugins/Animation/MLDeformer/NearestNeighborModel/NearestNeighborModel.uplugin
@@ -36,6 +36,10 @@
 			"Enabled": true
 		},
 		{
+			"Name": "ComputeFramework",
+			"Enabled": true
+		},
+		{
 			"Name": "DeformerGraph",
 			"Enabled": true
 		},
