--- a/Engine/Config/BaseGame.ini
+++ b/Engine/Config/BaseGame.ini
@@ -251,6 +251,7 @@ FrameInterpolationProcessor=Class'/Script/LiveLink.LiveLinkBasicFrameInterpolati
 +EngineExtraStageFiles=(Path="Content/Maps/Templates")
 +EngineExtraStageFiles=(Path="Build", Files="Build.version", Recursive=false, NonUFS=true)
 +EngineExtraStageFiles=(Path="Source/ThirdParty/Licenses")
++EngineExtraStageFiles=(Path="/ValkyrieFortnite/Moderation/")
 
 ; default directories to stage
 bStageShaderDirs=true
