Enable landscape GPU culling on Android and iOS
[CL 25107263 by dmitriy dyomin in ue5-main branch]

--- a/Engine/Config/Android/AndroidEngine.ini
+++ b/Engine/Config/Android/AndroidEngine.ini
@@ -95,6 +95,8 @@ r.Vulkan.MemoryBacktrace=0
 [/Script/Engine.RendererSettings]
 r.DistanceFields=0
 r.TemporalAA.Mobile.UseCompute=0
+; Enable GPU culling for landscape
+landscape.SupportGPUCulling=1
 
 [AlternateTextureCompression]
 ;disabling TextureCompressionFormat for Android/IOS no longer needed
