--- a/Engine/Config/IOS/IOSEngine.ini
+++ b/Engine/Config/IOS/IOSEngine.ini
@@ -85,6 +85,8 @@ fx.Niagara.QualityLevel.Max=1
 [/Script/Engine.RendererSettings]
 r.DistanceFields=0
 r.TemporalAA.Mobile.UseCompute=0
+; Enable GPU culling for landscape
+landscape.SupportGPUCulling=1
 
 [AlternateTextureCompression]
 ;disabling TextureCompressionFormat for Android/IOS no longer needed
