--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2882,9 +2882,13 @@ bUseModernXcode=false
 bUseModernCodeSigning=true
 ModernSigningTeam=
 ModernSigningPrefix=com.YourCompany
+ModernBundleIdentifier=$(UE_SIGNING_PREFIX).$(UE_PRODUCT_NAME_STRIPPED)
+AppCategory=public.app-category.games
 TemplateMacPlist=/Engine/Build/Mac/Resources/Info.Template.plist
 TemplateMacEditorPlist=/Engine/Build/Mac/Resources/Info-Editor.Template.plist
 TemplateIOSPlist=/Game/Build/IOS/UBTGenerated/Info.Template.plist
+PremadeMacEntitlements=/Engine/Build/Mac/Resources/Sandbox.Server.entitlements
+ShippingSpecificMacEntitlements=/Engine/Build/Mac/Resources/Sandbox.NoNet.entitlements
 
 ; These are the defaults for Android settings, and they need to be in the .ini since UBT reads the .ini settings, without instantiating the class
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
