Add ini variable to enable/disable disk overflow store for patch chunks.
#preflight 64405602211b661dc4e3f016
#rb brian.white

[CL 25120382 by michael wanderson in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -3310,3 +3310,7 @@ GenericPipelineClass=/Script/InterchangePipelines.InterchangeGenericAssetsPipeli
 
 [/Script/InterchangePipelines.MaterialXPipelineSettings]
 PredefinedSurfaceShaders=((StandardSurface, "/Interchange/Functions/MX_StandardSurface.MX_StandardSurface"),(StandardSurfaceTransmission, "/Interchange/Functions/MX_TransmissionSurface.MX_TransmissionSurface"),(SurfaceUnlit, "/Interchange/Functions/MX_SurfaceUnlit.MX_SurfaceUnlit"),(UsdPreviewSurface, "/Interchange/Functions/MX_UsdPreviewSurface.MX_UsdPreviewSurface"))
+
+[BuildPatchServices]
+; Enable/Disable mechanism that provides a disk overflow store for patch chunks.
+bEnableDiskOverflowStore=true
