Remove libc++_shared.so from apk packages on Android by default. Enable advanced binary compression on Android #jira none #rb Chris.Babcock #preflight none
[CL 25126528 by dmytro vovk in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2951,10 +2951,10 @@ bAllowPatchOBBFile=False
 bAllowOverflowOBBFiles=False
 bExtractNativeLibs=true
 bEnableDomStorage=False
-bSkipLibCpp=False
+bSkipLibCpp=True
 bDisableLibCppSharedDependencyValidation=False
 bDisableFunctionDataSections=False
-bEnableAdvancedBinaryCompression=False
+bEnableAdvancedBinaryCompression=True
 bDisableStackProtector=False
 bEnableMulticastSupport=False
 
