[PCG] Fix badly-correlated results when using a Point Sampler to Density Noise combination, by varying random behaviour per node type.
Change node name to "Select Points" to clarify operation

#rb julien.lheureux, adrien.logut, thomas.tedemalm
#preflight 64423a6227014596f3330d5e

[CL 25143362 by huw bowles in ue5-main branch]

--- a/Engine/Plugins/Experimental/PCG/Config/BasePCG.ini
+++ b/Engine/Plugins/Experimental/PCG/Config/BasePCG.ini
@@ -15,3 +15,5 @@
 +PropertyRedirects=(OldName="PCGBlueprintElement.NestedLoopBody.InB",NewName="PCGBlueprintElement.NestedLoopBody.InInnerData")
 +PropertyRedirects=(OldName="PCGBlueprintElement.NestedLoopBody.InPointA",NewName="PCGBlueprintElement.NestedLoopBody.InOuterPoint")
 +PropertyRedirects=(OldName="PCGBlueprintElement.NestedLoopBody.InPointB",NewName="PCGBlueprintElement.NestedLoopBody.InInnerPoint")
+
++ClassRedirects=(OldName="PCGPointSamplerSettings",NewName="/Script/PCG.PCGSelectPointsSettings")
