Creating new parent class for widget editing settings and setting up widget and editor utility widget variants. #jira UE-165638 #rb Daren.Cheng #preflight 6442e0a5f030f684d51dde25
[CL 25154568 by lauren barnes in ue5-main branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -633,3 +633,9 @@ LogCookedStatus=false
 [/Script/TextureUtilitiesCommon.TextureImportSettings]
 CompressedFormatForFloatTextures=HDRCompressed_BC6
 
+[/Script/Blutility.EditorUtilityWidgetProjectSettings]
+bShowWidgetsFromEngineContent=True
+bShowWidgetsFromDeveloperContent=True
+bUseWidgetTemplateSelector=True
++CommonRootWidgetClasses=/Script/UMG.StackBox
++CommonRootWidgetClasses=/Script/UMG.GridPanel
