nDisplay: Moved SharedMemoryMedia to its own module to avoid circular dependency when trying to use it from DisplayCluster, since DisplayClusterMedia depends in DisplayCluster.
Now that it is in a module, it will be easier to eventually move it to another plugin since it does not need nDisplay and can be used independently of it.

#jira
#preflight 6445d4e027014596f3182924
#rb none

[CL 25160076 by Alejandro Arango in ue5-main branch]

--- a/Engine/Plugins/Runtime/nDisplay/nDisplay.uplugin
+++ b/Engine/Plugins/Runtime/nDisplay/nDisplay.uplugin
@@ -195,6 +195,15 @@
 				"Win64",
 				"Linux"
 			]
+		},
+		{
+			"Name": "SharedMemoryMedia",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"PlatformAllowList": [
+				"Win64",
+				"Linux"
+			]
 		}
 	],
 	"Plugins": [
