Tag as beta version #preflight 6445fcb4641e2c3cb43f1952
[CL 25160348 by Takashi Kuribayashi in ue5-main branch]

--- a/Engine/Plugins/Experimental/CineCameraRigs/CineCameraRigs.uplugin
+++ b/Engine/Plugins/Experimental/CineCameraRigs/CineCameraRigs.uplugin
@@ -12,7 +12,7 @@
 	"SupportURL": "",
 	"EnabledByDefault": false,
 	"CanContainContent": true,
-	"IsExperimentalVersion": true,
+	"IsBetaVersion": true,
 	"Installed": false,
 	"Modules": [
 		{
