OCIO: Plugin refactor in preparation of engine integration, all native OCIO operations have been refactored into a new module.
In a secondary CL, OpenColorIOWrapper would be moved to Engine/Source/Developer.

#jira UE-181340
#rb ruslan.idrisov, rod.bogart
#preflight 64418a3b0171aae0b12d71ef

[CL 25164088 by eric renaudhoude in ue5-main branch]

--- a/Engine/Plugins/Compositing/OpenColorIO/OpenColorIO.uplugin
+++ b/Engine/Plugins/Compositing/OpenColorIO/OpenColorIO.uplugin
@@ -16,6 +16,11 @@
 	"Installed" : false,
 	"Modules": [
 		{
+			"Name": "OpenColorIOWrapper",
+			"Type": "Editor",
+			"LoadingPhase": "PostConfigInit"
+		},
+		{
 			"Name": "OpenColorIO",
 			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit"
